s/MaxPermGen/MaxPermSize/g
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/weaver/trunk@1578229 13f79535-47bb-0310-9956-ffa450edef68